apps/base/MicroBlog/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: microblog
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command: ["sh", "-lc", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: microblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: appoc14/auth-service
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /whoami
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: microblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: appoc14/blog-service
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: microblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-conf
          configMap:
            name: microblog-nginx
            items:
              - key: default.conf
                path: default.conf
