apps/base/MicroBlog/blog.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: microblog
spec:
  selector:
    app: blog
  ports:
    - name: http
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: microblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: YOUR_REGISTRY/blog-service:latest
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
