apps/base/MicroBlog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: Microblog
spec:
  ports:
    - port: 8080
  selector:
    app: Microblog
  type: ClusterIP
